--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>KID Cake | 蛋糕</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -80,6 +81,94 @@
                 </a>
             </div>
         </div>
+        <!-- 產品介紹 -->
+        <h1>產品介紹</h1>
+        <div class="row">
+            <div class="col-lg-6 col-md-6 col-sm-12 mb-3">
+                <div class="card">
+                    <img src="./img/product1.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">純白雪原上的誘惑</h5>
+                        <p class="card-text">特殊的三層奶油塔，搭配上新鮮莓果及綠葉裝飾，清淡又高雅的設計，符合各種主題之場合</p>
+                        <a href="#" class="btn btn-primary">立即購買</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-12 mb-3">
+                <div class="card">
+                    <img src="./img/product2.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title"></h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                        <a href="#" class="btn btn-primary">立即購買</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-12 mb-3">
+                <div class="card">
+                    <img src="./img/product3.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">巧克力城堡中的黑森林</h5>
+                        <p class="card-text">隱藏在神秘森林中的城堡，城堡埋藏無限的美食，讓人一進入就無法逃離他的誘惑</p>
+                        <a href="#" class="btn btn-primary">立即購買</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-12 mb-3">
+                <div class="card">
+                    <img src="./img/product4.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                        <a href="#" class="btn btn-primary">立即購買</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- 服務 -->
+        <h1>服務</h1>
+
+
+        <!-- 聯絡我們 -->
+        <h1>聯絡我們</h1>
+        <form>
+            <div class="form-group row">
+                <label for="inputEmail3" class="col-sm-2 col-form-label">姓名</label>
+                <div class="col-sm-10">
+                    <input type="email" class="form-control" id="inputEmail3" placeholder="請輸入姓名">
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="inputPassword3" class="col-sm-2 col-form-label">信箱</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" id="inputPassword3" placeholder="請輸入信箱">
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="inputPassword3" class="col-sm-2 col-form-label">訊息</label>
+                <div class="col-sm-10">
+                    <textarea class="form-control" id="inputPassword3" placeholder="請輸入您寶貴的意見">
+                        </textarea>
+                </div>
+            </div>
+            <div class="form-group row text-center">
+                <div class="col-sm-12">
+                    <button type="submit" class="btn btn-primary">送出</button>
+                </div>
+            </div>
+        </form>
+        <!-- 地圖 -->
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3617.302906820019!2d121.22220631533261!3d24.955806847574802!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34682249c750d347%3A0x8cdb28de62e89e3d!2z6LWr57a16Zu76IWm6Kit6KiI5Z-56KiT5a246ZmiLeS4reWjouWtuOmZog!5e0!3m2!1szh-TW!2stw!4v1571402105069!5m2!1szh-TW!2stw"
+            width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+    </div>
+    <!-- 頁尾 -->
+    <footer class="text-center">
+        Andy Cake @copy; 2019
+    </footer>
 
     </div>
     <!-- Bootstrap JS -->
